--- a/README
+++ b/README
@@ -13,7 +13,7 @@ There are two ways to use this package.
 The slower one is to use the standard hash.Hash64 interface:
 
     h := siphash.New(key)
-    h.Write([]byte("Hello")
+    h.Write([]byte("Hello"))
     sum := h.Sum(nil) // returns 8-byte []byte
 
 or
