--- a/README
+++ b/README
@@ -34,6 +34,11 @@ func Hash(k0, k1 uint64, p []byte) uint64
     Hash returns the 64-bit SipHash-2-4 of the given byte slice with two
     64-bit parts of 128-bit key: k0 and k1.
 
+func Hash128(k0, k1 uint64, p []byte) (uint64, uint64)
+
+    Hash128 returns the 128-bit SipHash-2-4 of the given byte slice with two
+    64-bit parts of 128-bit key: k0 and k1.
+
 func New(key []byte) hash.Hash64
 
     New returns a new hash.Hash64 computing SipHash-2-4 with 16-byte key.
