--- a/README
+++ b/README
@@ -39,16 +39,24 @@ func Hash128(k0, k1 uint64, p []byte) (uint64, uint64)
     Hash128 returns the 128-bit SipHash-2-4 of the given byte slice with two
     64-bit parts of 128-bit key: k0 and k1.
 
+    Note that 128-bit SipHash is considered experimental by SipHash authors at this time.
+
 func New(key []byte) hash.Hash64
 
     New returns a new hash.Hash64 computing SipHash-2-4 with 16-byte key.
 
+func New128(key []byte) hash.Hash
+
+    New128 returns a new hash.Hash computing SipHash-2-4 with 16-byte key and 16-byte output.
+
+    Note that 16-byte output is considered experimental by SipHash authors at this time.
+
 
 PUBLIC DOMAIN DEDICATION
 
-Written in 2012 by Dmitry Chestnykh.
+Written by Dmitry Chestnykh and Damian Gryski.
 
-To the extent possible under law, the author have dedicated all copyright
+To the extent possible under law, the authors have dedicated all copyright
 and related and neighboring rights to this software to the public domain
 worldwide. This software is distributed without any warranty.
 http://creativecommons.org/publicdomain/zero/1.0/
